objects/UPC_Opportunity_Site__c.object
<CustomObject>
    <fields>
        <fullName>Building_ID__c</fullName>
        <formula>TEXT(UPC_Site__r.UPC_ADBASE_Address__r.UPC_ID_BUILDING__c)</formula>
        <label>Building ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HFC_Suitability__c</fullName>
        <formula>TEXT(UPC_Site__r.HFC_Suitability__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HFC Suitability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <formula>UPC_Site__r.Site_Name__c</formula>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  UPC_Opportunity__r.Account.Id , UPC_Opportunity__r.Account.Name , &quot;_self&quot; )</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS_Alert__c</fullName>
        <formula>UPC_Site__r.UPC_BBCS_Alert__c</formula>
        <label>BBCS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Building_ID_not_Found__c</fullName>
        <formula>UPC_Site__r.UPC_Building_ID_not_Found__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building ID not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Alert__c</fullName>
        <formula>UPC_Site__r.UPC_FTTH_Alert__c</formula>
        <label>FTTH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH__c</fullName>
        <formula>UPC_Site__r.UPC_FTTH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Alert__c</fullName>
        <formula>UPC_Site__r.UPC_HFC_Alert__c</formula>
        <label>HFC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_HFC__c</fullName>
        <formula>UPC_Site__r.UPC_HFC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HFC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Footprint_Check__c</fullName>
        <formula>UPC_Site__r.UPC_Last_Footprint_Check__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Footprint Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_No_SOHO_Service__c</fullName>
        <formula>UPC_Site__r.UPC_No_SOHO_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Only Solution Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_OS_ID__c</fullName>
        <formula>UPC_Site__r.UPC_ADBASE_Address__r.UPC_OS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OS ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Opportunity_Amount__c</fullName>
        <formula>UPC_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Opportunity_Stage__c</fullName>
        <formula>TEXT(UPC_Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Opportunity_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Address__c</fullName>
        <formula>UPC_Site__r.UPC_ADBASE_Address__r.UPC_Address_Formula__c</formula>
        <label>Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Number__c</fullName>
        <formula>UPC_Site__r.UPC_Site_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>UPC_Site__c</referenceTo>
        <relationshipLabel>Opportunities Using This Site</relationshipLabel>
        <relationshipName>Opportunity_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Soho_Service_Alert__c</fullName>
        <formula>UPC_Site__r.UPC_Soho_Service_Alert__c</formula>
        <label>Only Solution Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Alert__c</fullName>
        <formula>UPC_Site__r.UPC_ULL_CU_Alert__c</formula>
        <label>ULL CU</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Site</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OST-{000000}</displayFormat>
        <label>Opportunity Site ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>